Revised command sequence following best pratices